# colour-palette-analysis

./: .gitignore  README.md  render.yaml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  exceptions.py  main.py  schemas.py
backend/app/services/: __init__.py  color_utils.py  extractor_fast.py  extractor_precision.py  image_loader.py  site_colors.py
backend/tests/: conftest.py  test_api.py  test_color_utils.py  test_extractor.py  test_site.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ColorBlindness.tsx  ColorSwatch.tsx  ContrastMatrix.tsx  Controls.tsx  DonutChart.tsx  Dropzone.tsx  ExportMenu.tsx  Harmony.tsx  ImageEditor.tsx  PaletteGrid.tsx  Shades.tsx  SourcePreview.tsx  StickyPalette.tsx  UiPreview.tsx
frontend/src/components/ui/: Button.tsx  IconButton.tsx  SectionHeader.tsx  Segmented.tsx  Skeleton.tsx  Slider.tsx  Tabs.tsx  Toast.tsx  Toggle.tsx
frontend/src/hooks/: useCopyToClipboard.ts  useExtractPalette.ts  useTheme.ts
frontend/src/lib/: api.ts  colorNames.ts  cropImage.ts  exports.ts  formats.ts  palette.ts  svgToPng.ts
